# ge-trial-executable

./: .clang-format  .gitignore  .gitignore copy  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  README.md  components.cmake  sdkconfig.defaults  sdkconfig.defaults.esp32h2  sdkconfig.dev
apps/: CMakeLists.txt
main/: CMakeLists.txt  app_main.cpp
osal/: CMakeLists.txt  README.md
osal/FreeRTOS/: Task.cpp  Task.h
osal/RTOS/Task/: EventDriven.cpp  EventDriven.h  Monitor.cpp  Monitor.h  Task.cpp  Task.h  Timed.cpp  Timed.h
osal/config/: ClockOutputConfig.json  GpioConfig.json  SpiConfig.json  TimerConfig.json
osal/config/cmake/: GenerateClockOutputConfigHeader.cmake  GenerateGpioConfigHeader.cmake  GeneratePeripheralTypesHeader.cmake  GenerateSpiConfigHeader.cmake  GenerateTimerConfigHeader.cmake
osal/config/headerTemplates/: ClockOutputConfig.h.in  ClockOutputTypes.h.in  GpioConfig.h.in  GpioTypes.h.in  SpiConfig.h.in  SpiTypes.h.in  TimerConfig.h.in  TimerTypes.h.in
osal/esp-idf/: ClockOutput.cpp  ClockOutput.h  ClockOutputConfig.hpp  EspMatterDataModel.cpp  EspMatterDataModel.h  FileSystem.cpp  FileSystem.h  Gpio.cpp  Gpio.h  GpioConfig.hpp  Json.cpp  Json.h  KeyValueStore.cpp  KeyValueStore.h  Spi.cpp  Spi.h  SpiConfig.hpp  Timer.cpp  Timer.h  TimerConfig.hpp
osal/stdlib/: stdlib.cpp
